No hay gap entre el boton de desinstalar y que se muestre PIN WINDOW
Por hacer:

* Quitar de dentro de la app el icono de  ajustes que permite ver el timeout y si está activo el bloqueo

* Manera de que no se vean las aplicaciones cuando se pulsa el multitareas. Es una manera de copiar.

* Quitar botón que dice "Abrir pantalla de Pin" en NumbuX

* Poner PIN para cuando se quiere desactivar el boton manualmente.

* Distinto PIN y Pantalla para:
** Quitar accesibility y uninstall
** Desbloqueo de las apps

* Mandar notificación al instalar para llevarle a la app y ahí le salte el pop up. Y que cada 1min le vuelva a saltar para activar accesibilidad en ajustes.
-- Y que esa notificación le lleva a accesibility

* Cuando se instale la app que esté el botón en OFF

* activar una manera de hacer el lock remotamente

La app SÍ HACE:
- Bloquea todas las apps
- No se impide buscar dentro de ajustes (lupa)
- Aparece una Ventana si no se ha dado el permiso en accesibility.
- Redirige a Accesibility.
- Impide la desactivación de privilegios de accesibility sin poner el pin
- Cuando pones el PIN correcto, la pantalla desaparece
- Pide el PIN para desinstalar la aplicación
- Se puede poner el PIN para desinstalar y accesibility. Después ya no se vuelve a preguntar
- Boton para activar/desactivar bloqueo
- En cada ciclo que se desactiva y activa el bloqueo manualmente, se resetea qué se ha desbloqueado. (vuelve a preguntar)
- Excluir accesibility y desintalar del botón del bloqueo de apps. Están siempre bloqueadas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">Numbux</string>
     <string name="accessibility_service_description">Servicio de control parental Numbux</string>
+
+    <!-- Device-admin meta -->
+    <string name="device_admin_label">Numbux Device Admin</string>
+    <string name="device_admin_description">
+        Needed to prevent users from uninstalling or disabling accessibility.
+    </string>
 </resources>
