lock remoto FUNCIONANDO
* Tener solo una app:
Dependiendo de la credencial que se ponga al entrar en la app, será
1. Controller
2. Controlado

* Si se pone la credencial de "bloqueado", mandar notificación para llevarle a la app y ahí que le salte el pop up de activar accesibility. Y que cada 2min le vuelva a saltar para activar accesibilidad en ajustes.

* when I press multitask, have a completely dark window covering all the window except the button of "close all"

La app SÍ HACE:
- Bloquea todas las apps
- No se impide buscar dentro de ajustes (lupa)
- Aparece una Ventana si no se ha dado el permiso en accesibility.
- Redirige a Accesibility.
- Impide la desactivación de privilegios de accesibility sin poner el pin
- Cuando pones el PIN correcto, la pantalla desaparece
- Pide el PIN para desinstalar la aplicación
- Se puede poner el PIN para desinstalar y accesibility. Después ya no se vuelve a preguntar
- Boton para activar/desactivar bloqueo
- En cada ciclo que se desactiva y activa el bloqueo manualmente, se resetea qué se ha desbloqueado. (vuelve a preguntar)
- Excluir accesibility y desintalar del botón del bloqueo de apps. Están siempre bloqueadas
- Preguntar PIN cuando se quiere desactivar manualmente
- El botón cuando la instalas está en OFF.
- La APK (la app), cuando te la descargas tiene dos iconos
1. NumbuX bloqueador
2. NumbuX controlador

Y bloquea el otro móvil.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Numbux</string>
+    <string name="controller_label">Numbux Controller</string>
     <string name="accessibility_service_description">Servicio de control parental Numbux</string>
 
     <!-- Device-admin meta -->
