--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">Numbux</string>
-    <string name="controller_label">Numbux Controller</string>
-    <string name="accessibility_service_description">Servicio de control parental Numbux</string>
+    <string name="app_name">NumbuX</string>
+    <string name="controller_label">NumbuX Controller</string>
+    <string name="accessibility_service_description">Permisos para NumbuX</string>
 
     <!-- Device-admin meta -->
-    <string name="device_admin_label">Numbux Device Admin</string>
+    <string name="device_admin_label">NumbuX Device Admin</string>
     <string name="device_admin_description">
         Needed to prevent users from uninstalling or disabling accessibility.
     </string>
